--- a/OpenCode/Base.lproj/Main.storyboard
+++ b/OpenCode/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="j5d-Jn-fGS">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -632,6 +632,6 @@
         <image name="News" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YrS-fe-iQA"/>
+        <segue reference="OJm-Zz-PpR"/>
     </inferredMetricsTieBreakers>
 </document>
